AdolaDEVMeta/force-app/main/default/objects/Product_Relation__c/Product_Relation__c.object-meta.xml
<CustomObject>
    <label>Product Relation</label>
    <nameField>
        <label>Product Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Relation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>