AdolaDEVMeta/force-app/main/default/objects/Product_Relation__c/fields/Parent_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Id__c</fullName>
    <label>Parent Product Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>