AdolaDEVMeta/force-app/main/default/objects/Product_Relation__c/fields/Parent_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product_Name__c</fullName>
    <label>Parent Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>