AdolaDEVMeta/force-app/main/default/objects/Product_Relation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Relation</relationshipLabel>
    <relationshipName>Product_Relation</relationshipName>
    <type>Lookup</type>
</CustomField>